[package]
name = "nvie-wasi"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A Kubernetes Gateway API Implementation in Rust"
keywords = ["kubernetes", "k8s", "ingress"]
documentation = "https://docs.rs/nvie-wasi"
repository = "https://github.com/navicore/nvie-wasi"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fakeit = "1.1"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
itertools = "0.12"
k8s-openapi = { version = "0.21", features = ["v1_26"] }
kube = { version = "0.88", features = ["runtime", "derive", "client", "ws"] }
regex = "1.10"
rustls = "0.23"
thiserror = "1"
time = "0.3" # For handling dates in the certificate
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = [ "v4" ] }

[dev-dependencies]
anyhow = "1"
